<resources>
    <string name="app_name">Medicity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medicity</string>
    <string name="nav_header_subtitle">Powered By www.trulloy.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="menu_home">Home</string>
    <string name="menu_allvisit">All Visits</string>
    <string name="menu_vaccination">Vaccination</string>
    <string name="menu_childplan">Child Plan</string>
    <string name="menu_deletedata">Delete Data</string>
    <string name="menu_share">Share</string>
    <string name="menu_covid19">Covid-19</string>

    <!-- Button  Name Strings -->
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>

    <!-- Common words Used in Application -->
    <string name="word_world">World</string>
    <string name="word_confirmed">Confirmed</string>
    <string name="word_active">Active</string>
    <string name="word_recovered">Recovered</string>
    <string name="word_deceased">Deceased</string>
    <string name="word_name">Name</string>
    <string name="word_email">Email</string>
    <string name="word_phone">Phone</string>
    <string name="word_country">Country</string>
    <string name="word_pincode">Pincode</string>
    <string name="word_Locality">Locality</string>

    <string-array name="healtype_arrays">
        <item>Self</item>
        <item>Doctor</item>
    </string-array>
    <string-array name="countryName_arrays">
        <item>India</item>
        <item>United States</item>
    </string-array>

    <string-array name="datatype_arrays">
        <item>Health Policy</item>
        <item>Child Data</item>
    </string-array>

    <string name="title_activity_add_health_policy">Add Health Policy</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>