<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_allvisits"
            android:icon="@drawable/ic_allvisits"
            android:title="@string/menu_allvisit" />
        <item
            android:id="@+id/nav_vaccination"
            android:icon="@drawable/ic_vaccine"
            android:title="@string/menu_vaccination" />
        <item
            android:id="@+id/nav_childplan"
            android:icon="@drawable/ic_child"
            android:title="@string/menu_childplan" />
        <item
            android:id="@+id/nav_deletedata"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_deletedata" />
        <item
            android:id="@+id/nav_covid19"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_covid19" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>
    -->
</menu>
