<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.trulloy.bfunx.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_allvisits"
        android:name="com.trulloy.bfunx.ui.allvisit.AllVisitsFragment"
        android:label="@string/menu_allvisit"
        tools:layout="@layout/fragment_allvisit" />

    <fragment
        android:id="@+id/nav_vaccination"
        android:name="com.trulloy.bfunx.ui.vaccination.VaccinationFragment"
        android:label="@string/menu_vaccination"
        tools:layout="@layout/fragment_vaccination" />

    <!--
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.trulloy.navigationdrawertutorial.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.trulloy.navigationdrawertutorial.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.trulloy.navigationdrawertutorial.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.trulloy.navigationdrawertutorial.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    -->
</navigation>