<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#8ABAAE"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_edit"
                    android:id="@+id/settingEditBtn" />

                 <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save"
                    android:id="@+id/settingSaveBtn" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:text="@string/word_name" />

                <EditText
                    android:hint="@string/word_name"
                    android:id="@+id/settingNameEdtTxt"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
                    android:ems="10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:text="@string/word_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_email"
                    android:id="@+id/settingEmailEdtTxt"
                    android:inputType="none"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
                    android:ems="10"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_phone"
                    android:ems="10"
                    android:gravity="left"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_phone"
                    android:id="@+id/settingPhoneEdtTxt"
                    android:inputType="none"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
                    android:ems="10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_country"
                    android:ems="10"
                    android:gravity="left"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_country"
                    android:id="@+id/settingCountryEdtTxt"
                    android:inputType="none"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
                    android:ems="10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_pincode"
                    android:ems="10"
                    android:gravity="left"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_pincode"
                    android:id="@+id/settingPincodeEdtTxt"
                    android:inputType="none"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
                    android:ems="10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_Locality"
                    android:ems="10"
                    android:gravity="left"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_Locality"
                    android:id="@+id/settingLocalityEdtTxt"
                    android:inputType="none"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
                    android:ems="10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settingToggleBtn" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location Update"
                    android:id="@+id/locationUpdateBtn" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>